# CUDA_kernel

./: common.h  histogram  histogram.cu
bilateralFilter/: CMakeLists.txt  CMakeLists.txt_  Makefile  bilateralFilter.cu
bilateralFilter/asset/: moon_3840_2160_kernel_bilateraled_16u.tif  moon_3840_2160_npp_bilateraled_16u.tif  opencv_cpu_result.tif
bilateralFilter/src/: main.cpp
convolution2d_direct/: CUDA实现直接卷积direct-convolution，采用了一些必要的优化方式.txt  Makefile  convolution2d_direct.cu  convolution2d_direct_float_cudnn_compare.cu  report.txt
convolution2d_direct/convolution_ncu/: convolution_ncu.ncu-proj
element_wise/: Makefile  element-wise.md  element_wise.cu  readme.md
element_wise/ncu/: ncu.ncu-proj
histogram/: Makefile  histogram  histogram.cu  naive.ncu-rep
histogram_d/: histogram.cu  vectorization.ncu-rep
img_resize/: Makefile  rgb_uint8_resize.cu
matrix_add/: Makefile  matrix_add  matrix_add.cu
reduce_softmax/: Makefile  reduce_softmax.cu
reduce_sum/: Makefile  reduceInteger  reduceInteger.cu
sgemm/: Makefile  sgemm.cu
sgemv/: Makefile  sgemv.cu
transpose/: Makefile  transpose.cu
